gcc/testsuite/g++.dg/cpp0x/constexpr-ice2.C
// { dg-options -std=c++0x }
int x;
constexpr int& rx = x; // { dg-error "int&" }
